--- a/API/.htaccess
+++ b/API/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine on
-RewriteBase /~adw4520/DB_connect/API
+RewriteBase /ISTE330-Project/API
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ MyService.php?request=$1 [L,QSA,NC]
